    * Dependencies graph is now created with iids instead of names.
    * Interactive mode read command: added resolve_index_inheritance so proper dependencies can be shown.
    * Interactive mode depend command: removed duplicate items from report.
    * New admin command: depend. Output the full list of dependencies for an index.

    programmer visible changes:
    * Separated instlClient to different files by command: insltClientCopy, instlClientRemove, instlClientSync, instlClientUninstall.
    * Renamed translate_url to translate_url_parser in commandline options parsing.
    * Rearranged the command parsing code to be more efficient and easier to add new commands or change existing commands options.
    * Move few functions to instlInstanceBase to make them available to the new depend command.

15/2/2015 0.10.0.2
    user visible changes, admin:
    * removed --acl when uploading to S3.

    programmer visible changes:
    * Re-added missing line in upload code

15/2/2015 0.10.0.0
    user visible changes, client:
    * Support for S3 secure downloads.
    * New command translate_url for testing the creation of secure s3 urls.

    programmer visible changes:
    * Global variable var_stack is now imported as itself rather as var_list to avoid cross import problems.
    * ConnectionBase class and derived classes ConnectionHTTP and ConnectionS3 handle secure connection issues.

28/1/2015 0.9.19.4
    user visible changes, client:
    * When writing echo's to log the log file is created in the begin sections and permissions are set to 666 so later launches of instl can append to log.
    * For many files that are created during instl run permissions are set to 666.
    * Moved  the curl config file to a local directory instead of being in the bookkeeping directory.
    * Fixed echo function on Mac - it was missing quotes.
    * New default __USER_CONFIG_FILE_PATH__: $(__USER_HOME_DIR__)/$(__USER_CONFIG_FILE_NAME__)