@@ -14,6 +14,25 @@ __ADMIN_GUI_CMD_LIST__:
   - wtar
   - stage2svn
   - fix-props
+  - depend
+
+__ADMIN_CALL_INSTL_STANDARD_TEMPLATE__:
+  - $(__INSTL_EXE_PATH__)
+  - $(ADMIN_GUI_CMD)
+  - --config-file
+  - $(ADMIN_GUI_CONFIG_FILE)
+  - --out
+  - $(ADMIN_GUI_OUT_BATCH_FILE)
+
+__ADMIN_CALL_INSTL_DEPEND_TEMPLATE__:
+  - $(__INSTL_EXE_PATH__)
+  - $(ADMIN_GUI_CMD)
+  - --in
+  - $(__STAGING_INDEX_FILE__)
+  - --out
+  - $(ADMIN_GUI_OUT_DEPEND_FILE)
+
+__STAGING_INDEX_FILE__: $(STAGING_FOLDER)/instl/index.yaml
 
 # these vars will be written to the config file
 __GUI_CONFIG_FILE_VARS__:
@@ -26,7 +45,7 @@ __GUI_CONFIG_FILE_VARS__:
   - CLIENT_GUI_CREDENTIALS_ON
   - ADMIN_GUI_CMD
   - ADMIN_GUI_CONFIG_FILE
-  - ADMIN_GUI_OUT_FILE
+  - ADMIN_GUI_OUT_BATCH_FILE
   - ADMIN_GUI_RUN_BATCH
   - ADMIN_GUI_LIMIT
 
@@ -40,7 +59,8 @@ CLIENT_GUI_CREDENTIALS: ""
 CLIENT_GUI_CREDENTIALS_ON: 0
 
 ADMIN_GUI_CONFIG_FILE: ""
-ADMIN_GUI_OUT_FILE: $(ADMIN_GUI_CONFIG_FILE_NAME)-$(ADMIN_GUI_CMD).$(BATCH_EXT)
+ADMIN_GUI_OUT_BATCH_FILE: $(ADMIN_GUI_CONFIG_FILE_NAME)-$(ADMIN_GUI_CMD).$(BATCH_EXT)
+ADMIN_GUI_OUT_DEPEND_FILE: $(ADMIN_GUI_CONFIG_FILE_NAME)-$(ADMIN_GUI_CMD).txt
 ADMIN_GUI_RUN_BATCH: yes
 ADMIN_GUI_LIMIT: ""
 
