@@ -107,7 +107,7 @@ def prepare_args_parser(in_command):
         'create-links':         {'mode': 'an', 'options': ('out', 'run', 'conf',), 'help':  'create links from the base SVN checkout folder for a specific version'},
         'create-repo-rev-file': {'mode': 'an', 'options': ('conf',), 'help':  'create repo rev file for a specific revision'},
         'create-rsa-keys':      {'mode': 'an', 'options': ('conf',), 'help':  'create private and public keys'},
-        'depend':               {'mode': 'an', 'options': ('in', 'run',), 'help':  'output a dependencies map for an index file'},
+        'depend':               {'mode': 'an', 'options': ('in', 'out',), 'help':  'output a dependencies map for an index file'},
         'fix-props':            {'mode': 'an', 'options': ('out', 'conf',), 'help':  'create svn commands to remove redundant properties such as executable bit from files that should not be marked executable'},
         'fix-symlinks':         {'mode': 'an', 'options': ('out', 'run','conf',), 'help':  'replace symlinks with .symlinks files'},
         'gui':                  {'mode': 'gi', 'options': (), 'help':  'graphical user interface'},
