@@ -898,7 +898,10 @@ class InstlAdmin(InstlInstanceBase):
                 depend_result[IID]['needed_by'] = None
             else:
                 depend_result[IID]['needed_by'] = sorted(needed_by_list)
-        writeAsYaml(YamlDumpWrap(depend_result, sort_mappings=True), sys.stdout)
+
+        out_file_path = var_stack.resolve("$(__MAIN_OUT_FILE__)", raise_on_fail=False)
+        with write_to_file_or_stdout(out_file_path) as out_file:
+            writeAsYaml(YamlDumpWrap(depend_result, sort_mappings=True), out_file)
         return False
 
 def percent_cb(unused_complete, unused_total):
